# kleofas_ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev.txt  docker-compose.yml  pyproject.toml
api/: Dockerfile  main.py  requirements.txt
api/src/: constants.py  exceptions.py  settings.py
api/src/admin/: auth.py  views.py
api/src/auth/: manager.py  oauth.py  transport.py
api/src/controllers/: base.py  courses.py  debug.py  materials.py  messages.py  sso.py  tests.py  users.py
api/src/dao/: base.py  courses.py  materials.py  messages.py  questions.py  sso.py  tests.py  user_courses.py  users.py
api/src/db/: config.py  models.py  redis.py  s3.py
api/src/schemas/: base.py  courses.py  materials.py  messages.py  questions.py  sso.py  tests.py  users.py
api/src/tasks/: celery.py  tasks.py
api/src/utils/: email.py  ollama.py  sessions.py  utils.py
api/templates/: chat.html  reset_password.html  verify_email.html
api/templates/starlette_admin/: flower.html  layout.html
conf/: .env.example
docker/: app.sh  celery.sh
migrations/: env.py
migrations/versions/: 0551d1250053_add_lazy_join.py  2098a45e315d_add_m2m.py  361a50259a99_add_cascade_delete.py  4c2170093f33_add_m2m.py  4d6bb8e6922d_fix_question.py  5f156a28ed9b_update_user_2.py  8746c18e8036_update_user.py  9f5050418a02_change_question_message_id_to_test_id.py  c228b3cadacf_init_migration.py  d71bd7a68d9a_add_other_models.py  e6a2d1854cf7_add_sso.py  f4b8b9fe1add_add_type_and_course_id_for_message.py
