[project]
name = "kleofas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.15.1",
    "asyncpg>=0.30.0",
    "celery>=5.4.0",
    "faker>=37.0.2",
    "fastapi>=0.115.12",
    "fastapi-storages>=0.3.0",
    "fastapi-users[sqlalchemy]>=14.0.1",
    "flower>=2.0.1",
    "httpx>=0.28.1",
    "httpx-oauth>=0.16.1",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.6",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
    "pytest-mock>=3.14.0",
    "redis>=5.2.1",
    "sqlalchemy>=2.0.39",
    "starlette-admin>=0.14.1",
    "uvicorn>=0.34.0",
]

[tool.black]
line-length = 127
preview = true

[tool.isort]
profile = "black"
line_length = 127
known_first_party = ["api", "tests", "src"]

[tool.pytest.ini_options]
addopts = "-s"
pythonpath = ". api"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
